[package]
name = "permit-client-rs"
version = "2.0.0"
authors = ["OpenAPI Generator team and contributors"]
description = " Authorization as a service "
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^3.9"
serde_json = "^1.0"
url = "^2.5"
uuid = { version = "^1.10", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.12"
default-features = false
features = ["json", "multipart", "rustls-tls"]
